# Copyright (c) 2019 Sony Corporation. All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

add_executable(mnist_runtime mnist_runtime.cpp)
target_link_libraries(mnist_runtime ${NBLA_LIBRARY_NAME} ${NBLA_UTILS_LIBRARY_NAME})
set_property(TARGET mnist_runtime PROPERTY CXX_STANDARD 11)
